# plume

./: .gitignore  CLAUDE.md  README.md  landing.html  package.json  pnpm-lock.yaml  vitest.config.ts
docs/: index.html
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  embed.rs  embeddings.rs  error.rs  import.rs  lib.rs  preview.rs  storage.rs  websearch.rs
src-tauri/src/export/: bluesky.rs  discord.rs  docx.rs  html.rs  linkedin.rs  markdown.rs  mastodon.rs  mod.rs  plaintext.rs  reddit.rs  richhtml.rs  rtf.rs  social.rs  telegram.rs  threads.rs  x.rs
src/lib/: aiBusy.svelte.ts  api.ts  assistant.svelte.ts  buildSidebarTree.test.ts  buildSidebarTree.ts  chatHistory.test.ts  chatHistory.ts  clickOutside.ts  documentTypes.ts  formatDate.test.ts  formatDate.ts  formatError.test.ts  formatError.ts  headlessStream.svelte.ts  ideaExpand.svelte.ts  inlineEdit.svelte.ts  multiply.svelte.ts  multiplyTargets.ts  templates.ts  textUtils.test.ts  textUtils.ts  toast.svelte.ts  welcomeDoc.ts
src/lib/components/: AssistantPanel.svelte  CheatsheetPanel.svelte  Dialog.svelte  DocumentIcon.svelte  Editor.svelte  HistoryPanel.svelte  HomeShelf.svelte  IdeaCaptureModal.svelte  ImportModal.svelte  MoveToFolderMenu.svelte  MultiplyModal.svelte  NewDocumentDialog.svelte  Preview.svelte  RightPaneTabs.svelte  SettingsDialog.svelte  Sidebar.svelte  SourceViewerModal.svelte  StatusBar.svelte  Toasts.svelte  Toolbar.svelte  TopBar.svelte
src/lib/editor/: formatting.ts  themes.ts
src/routes/: +layout.svelte  +page.svelte
tasks/: lessons.md  monetization.md  polish-backlog.md  product-direction.md  todo.md  ux-review.md  v2-bug-scan.md  v2-roadmap.md
