[package]
name = "markdown"
version = "0.1.0"
description = "Local-first markdown writing app — write once, publish everywhere"
authors = ["Adam Wickwire"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "markdown_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
comrak = { version = "0.52.0", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "stream"] }
uuid = { version = "1.23.3", features = ["v4"] }
chrono = { version = "0.4.45", features = ["serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time"] }
tauri-plugin-dialog = "2.7.1"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
docx-rs = "0.4.20"
image = "0.25"
base64 = "0.22"
regex = "1"
# Local embeddings for the semantic notebook. Static-linked onnxruntime
# (ort-download-binaries) keeps the release binary notarization-clean; model
# download uses rustls to match the app's TLS stack.
fastembed = { version = "4.9.1", default-features = false, features = ["ort-download-binaries", "hf-hub-rustls-tls"] }

[dev-dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"

